daytrader-portfoliosapp/daytrader-portfolios/env/external/k8s/daytrader-portfolios-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: daytrader-portfolios
  name: daytrader-portfolios
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daytrader-portfolios
  template:
    metadata:
      labels:
        app: daytrader-portfolios
    spec:
      containers:
      - image: dhvines/daytrader-portfolios:4.0.15
        imagePullPolicy: IfNotPresent
        name: daytrader-portfolios
        ports:
        - containerPort: 3443
          protocol: TCP
