daytrader-portfoliosapp/daytrader-portfolios/env/external/k8s/daytrader-portfolios-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader-portfolios
  name: daytrader-portfolios
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 3443
  selector:
    app: daytrader-portfolios
  sessionAffinity: None
  type: NodePort
