daytrader-portfoliosapp/daytrader-portfolios/env/external/k8s/daytrader-portfolios-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: daytrader-portfolios
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - portfolios.daytrader.geronimo.apache.org
    secretName: password
  backend:
    serviceName: daytrader-portfolios
    servicePort: 443
